--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
     <a href="/" class="active"><i class="fa fa-sync"></i> NKONVERT</a>
     <a href="/boost"><i class="fa fa-lightbulb"></i>Motivation</a>
     <a href="/zip"><i class="fa fa-file-zipper"></i> Compresser Zip</a>
+    <a href="/tooltube"><i class="fa fa-file-zipper"></i> Tooltube</a>
 </nav>
 
 <div class="hero">
@@ -185,6 +186,7 @@
 </script>
 </body>
 </html>
+
 
 
 
