--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,12 @@
         <h3>Convertir PDF</h3>
         <p>Transformez vos PDF en Word, Images ou HTML instantanément.</p>
     </a>
-
+    
+    <a href="/boost" class="tool-card boost">
+        <div class="icon-box"><i class="fas fa-bolt"></i></div>
+        <h3>Boost Spirit</h3>
+        <p>Besoin d'énergie ? L'Oracle NKALAA a un message pour vous.</p>
+    </a>
     <a href="/zip" class="tool-card zip">
         <div class="icon-box"><i class="fas fa-file-zipper"></i></div>
         <h3>Compression ZIP</h3>
@@ -213,17 +218,14 @@
         <p>Divisez un gros PDF en plusieurs petits fichiers séparés.</p>
     </a>
 
-    <a href="/boost" class="tool-card boost">
-        <div class="icon-box"><i class="fas fa-bolt"></i></div>
-        <h3>Boost Spirit</h3>
-        <p>Besoin d'énergie ? L'Oracle NKALAA a un message pour vous.</p>
-    </a>
 </div>
 
 <footer>
     &copy; 2026 NKONVERT par NKALAA. Tous droits réservés. <br>
     Hébergé de manière sécurisée sur Render.
+    toujours prendre une minute pour wanda.
 </footer>
 
 </body>
 </html>
+
